--- a/part2_cnn/Classification/.gitignore
+++ b/part2_cnn/Classification/.gitignore
@@ -1,3 +1,13 @@
+# tmp dirs and files
+checkpoint
+checkpoints
+data
+cifar-debug.py
+test.eps
+dev
+monitor.py
+exp
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -8,6 +18,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -19,11 +30,9 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -43,9 +52,8 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
-*.cover
+*,cover
 .hypothesis/
-.pytest_cache/
 
 # Translations
 *.mo
@@ -54,7 +62,6 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
 
 # Flask stuff:
 instance/
@@ -69,7 +76,7 @@ docs/_build/
 # PyBuilder
 target/
 
-# Jupyter Notebook
+# IPython Notebook
 .ipynb_checkpoints
 
 # pyenv
@@ -78,60 +85,20 @@ target/
 # celery beat schedule file
 celerybeat-schedule
 
-# SageMath parsed files
-*.sage.py
-
-# Environments
+# dotenv
 .env
-.venv
-env/
+
+# virtualenv
 venv/
 ENV/
-env.bak/
-venv.bak/
 
 # Spyder project settings
 .spyderproject
-.spyproject
 
 # Rope project settings
 .ropeproject
 
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-
-# cython generated cpp
-mmdet/ops/nms/src/soft_nms_cpu.cpp
-mmdet/version.py
-data
-.vscode
-.idea
-
-# custom
-*.pkl
-*.pkl.json
-*.log.json
-work_dirs/
-
-# Pytorch
-*.pth
-trash
-*jpg
-*png
-*.json
-pretrained
-ckpt
-celeba
-samples
-ckpt
-celeba
-samples
-.ipynb_checkpoint
-.DS_Store
+checkpoint/
+checkpoints/
 *.pth.tar
-*checkpoint/
-*checkpoints/
-*data/
+data/
